@@ -9,6 +9,7 @@ import org.springframework.web.server.ResponseStatusException;
 import org.springframework.http.HttpStatus;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class DubboQueryClient {
@@ -19,7 +20,7 @@ public class DubboQueryClient {
   public QueryResult fetchRecord(String id) {
     try {
       CustomerDTO customer = customerDubboService.getCustomer(Long.valueOf(id));
-      return new QueryResult(customer.getId(), customer.getName(), customer.getEmail());
+      return new QueryResult(String.valueOf(customer.getId()), customer.getName(), customer.getEmail());
     } catch (Exception ex) {
       throw new ResponseStatusException(HttpStatus.BAD_GATEWAY,
           "Dubbo query service error: " + ex.getMessage(), ex);
@@ -30,8 +31,8 @@ public class DubboQueryClient {
     try {
       List<CustomerDTO> customers = customerDubboService.searchCustomers(name, email);
       return customers.stream()
-          .map(customer -> new QueryResult(customer.getId(), customer.getName(), customer.getEmail()))
-          .toList();
+          .map(customer -> new QueryResult(String.valueOf(customer.getId()), customer.getName(), customer.getEmail()))
+          .collect(Collectors.toList());
     } catch (Exception ex) {
       throw new ResponseStatusException(HttpStatus.BAD_GATEWAY,
           "Dubbo query service error: " + ex.getMessage(), ex);
